website/assets/css/main.css
/* ... */
		input[type="submit"]:active,
		input[type="reset"]:active,
		input[type="button"]:active,
		.button:active {
			background-color: rgba(73, 191, 157, 0.1);
			border-color: #34597c;
			color: #34597c !important;
		}

		input[type="submit"].icon,
		input[type="reset"].icon,
		input[type="button"].icon,
		.button.icon {
			padding-left: 1.35em;
		}

			input[type="submit"].icon:before,
			input[type="reset"].icon:before,
			input[type="button"].icon:before,
			.button.icon:before {
				margin-right: 0.5em;
			}

		input[type="submit"].fit,
		input[type="reset"].fit,
		input[type="button"].fit,
		.button.fit {
			min-width: 0;
			width: 100%;
		}

		input[type="submit"].small,
		input[type="reset"].small,
		input[type="button"].small,
		.button.small {
			font-size: 0.8em;
		}

		.button img {
			vertical-align: middle;
			margin-right: 8px;
		}

		input[type="submit"].large,
		input[type="reset"].large,
		input[type="button"].large,
		.button.large {
			font-size: 1.35em;
		}

		input[type="submit"].primary,
		input[type="reset"].primary,
		input[type="button"].primary,
		.button.primary {
			background-color: #34597c;
			border-color: #34597c;
			color: #ffffff !important;
		}

			input[type="submit"].primary:hover,
			input[type="reset"].primary:hover,
			input[type="button"].primary:hover,
			.button.primary:hover {
				background-color: #34597c;
				border-color: #34597c;
			}

			input[type="submit"].primary:active,
			input[type="reset"].primary:active,
			input[type="button"].primary:active,
			.button.primary:active {
				background-color: #34597c;
				border-color: #34597c;
			}

		input[type="submit"].disabled, input[type="submit"]:disabled,
		input[type="reset"].disabled,
		input[type="reset"]:disabled,
		input[type="button"].disabled,
		input[type="button"]:disabled,
		.button.disabled,
		.button:disabled {
			background-color: #e7e7e7 !important;
			border-color: #e7e7e7 !important;
			color: #b2b2b2 !important;
			cursor: default;
		}

/* Work Item */

	.work-item {
		margin: 0 0 2em 0;
	}

		.work-item .image {
			margin: 0 0 1.5em 0;
		}

		.work-item h3 {
			font-size: 1em;
			margin: 0 0 0.5em 0;
		}

		.work-item p {
			font-size: 0.8em;
			line-height: 1.5em;
			margin: 0;
		}

/* Header */

	#header {
		display: -moz-flex;
		display: -webkit-flex;
		display: -ms-flex;
		display: flex;
		-moz-flex-direction: column;
		-webkit-flex-direction: column;
		-ms-flex-direction: column;
		flex-direction: column;
		-moz-align-items: -moz-flex-end;
		-webkit-align-items: -webkit-flex-end;
		-ms-align-items: -ms-flex-end;
		align-items: flex-end;
		-moz-justify-content: space-between;
		-webkit-justify-content: space-between;
		-ms-justify-content: space-between;
		justify-content: space-between;
		background-color: #1f1815;
		background-attachment: scroll,								scroll;
		background-image: url("images/overlay.png"), url("../../images/bg.png");
		background-position: top left,							top left;
		background-repeat: repeat,								no-repeat;
		background-size: auto,								150%;
		color: rgba(255, 255, 255, 0.5);
		height: 100%;
		left: 0;
		padding: 8em 4em;
		position: fixed;
		text-align: right;
		top: 0;
		width: 35%;
	}

		#header > * {
			-moz-flex-shrink: 0;
			-webkit-flex-shrink: 0;
			-ms-flex-shrink: 0;
			flex-shrink: 0;
			width: 100%;
		}

		#header > .inner {
			-moz-flex-grow: 1;
			-webkit-flex-grow: 1;
			-ms-flex-grow: 1;
			flex-grow: 1;
			margin: 0 0 2em 0;
		}

	#header strong, #header b {
		color: #ffffff;
	}

	#header a {
		color: #a2a2a2;
		font-size: 1.2em;
	}	#header h2, #header h3, #header h4, #header h5, #header h6 {
		color: #ffffff;
	}

	#header h1 {
		color: rgba(255, 255, 255, 0.5);
		font-size: 3.5em;
		line-height: 1em;
		margin: 0;
	}		#header .image.avatar {
			margin: 0 0 1em 0;
	width: 6.25em;
}

.amazon-link-container {
	text-align: right;
	padding: 0 4em;
	position: absolute;
	bottom: auto;
	top: 26.5em;
	right: 0;
	left: 0;
}

.amazon-button {
	display: inline-block;
	background: transparent;
	color: #c9c9c9 !important;
	padding: 6px 16px;
	border-radius: 4px;
	font-weight: 400;
	font-size: 1.0em;
	text-decoration: none;
	border: 1px solid rgba(255, 255, 255, 0.2) !important;
	box-shadow: none;
	transition: all 0.3s ease;
}

.amazon-button:hover {
	background: rgba(255, 255, 255, 0.05);
	transform: none;
	box-shadow: none;
	color: #ffffff !important;
	border-color: rgba(255, 255, 255, 0.3) !important;
}

.amazon-vol {
	display: block;
	margin-top: 0.15em;
}

.download-links {
	display: flex;
	flex-direction: column;
	align-items: flex-end;
	gap: 0.3em;
	margin-top: 2em;
}

.download-sep {
	display: none;
}

.download-button {
	display: inline-block;
	color: #c9c9c9 !important;
	padding: 2px 6px;
	font-weight: 400;
	font-size: 0.85em;
	text-decoration: none;
	border: none !important;
	box-shadow: none;
	transition: color 0.3s ease;
}

.download-button:hover {
	color: #ffffff !important;
}

.qe-logo {
	position: absolute;
	top: 1.5em;
	right: 1.5em;
	transition: opacity 0.3s ease;
	border: none !important;
	z-index: 10;
}

.qe-logo:hover {
	opacity: 0.7;
}

.qe-logo img {
	width: 140px;
	height: auto;
}

/* TOC Tabs */

.toc-tabs {
	margin-top: 1em;
}

.tab-buttons {
	display: flex;
	gap: 0;
	border-bottom: 2px solid rgba(0, 0, 0, 0.1);
	margin-bottom: 1.5em;
}

.tab-btn {
	background: none;
	border: none;
	border-bottom: 2px solid transparent;
	margin-bottom: -2px;
	padding: 0.6em 1.2em;
	font-family: inherit;
	font-size: 0.9em;
	font-weight: 600;
	color: #999;
	cursor: pointer;
	transition: color 0.2s ease, border-color 0.2s ease;
}

.tab-btn:hover {
	color: #555;
}

.tab-btn.active {
	color: #444;
	border-bottom-color: #444;
}

.tab-content {
	display: none;
}

.tab-content.active {
	display: block;
}

.tab-content ol {
	list-style: decimal;
	padding-left: 1.5em;
	margin: 0 0 0.5em 0;
}

.tab-content ol li {
	padding: 0.25em 0;
	color: #555;
}
/* ... */

